RESOLVED FIXED243114
[iOS] fast/events/touch/ios/long-press-on-(link|image).html fail after 251828@main
https://bugs.webkit.org/show_bug.cgi?id=243114
Summary [iOS] fast/events/touch/ios/long-press-on-(link|image).html fail after 251828...
Wenson Hsieh
Reported 2022-07-22 13:49:55 PDT
.
Attachments
Wenson Hsieh
Comment 1 2022-07-22 14:45:16 PDT
EWS
Comment 2 2022-07-22 16:26:10 PDT
Committed 252750@main (1c032700aac4): <https://commits.webkit.org/252750@main> Reviewed commits have been landed. Closing PR #2673 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-07-22 16:27:15 PDT
Note You need to log in before you can comment on or make changes to this bug.