[iOS] fast/events/touch/ios/long-press-on-(link|image).html fail after 251828@main https://bugs.webkit.org/show_bug.cgi?id=243114

Reviewed by Aditya Keerthi.

After `251828@main`, the `_contextMenuInteraction` is no longer used to present the context menu
when long pressing images and links; instead, we rely on the text interaction assistant's context
menu interaction.

As a result, the testing hook `-[WKContentView _contentsOfUserInterfaceItem:]` no longer works,
since it still calls `_contextMenuInteraction` directly; fix this by replacing it with a call to the
`-contextMenuInteraction` helper method.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _contentsOfUserInterfaceItem:]):

Canonical link: https://commits.webkit.org/252750@main